--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
   ],
   "functions": {
     "api/index.py": {
-      "runtime": "vercel-python@3.10"
+      "memory": 1024,
+      "maxDuration": 10
     }
   }
 }
